--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300&display=swap');
+
+:root {
+  --primary: #6e46fc;
+  --primary-text: #fff;
+}
 body{
   margin:0;
   padding:0;
