--- a/react/src/containers/home/chat/chat.css
+++ b/react/src/containers/home/chat/chat.css
@@ -59,3 +59,17 @@
     border: none;
     background-color: rgb(127, 127, 255);
 }
+
+.chat-message-time{
+    position: absolute;
+    color: black;
+    bottom: -20px;
+    right: 0;
+    background-color: var(--primary-text-color);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.6);
+    border-radius: 3px;
+    padding-left: 3px;
+    padding-right: 3px;
+    font-size: 12px;
+    width: 25px;
+}
